Closed Bug 140146 Opened 23 years ago Closed 23 years ago

crash in nsMsgFolder during shutdown; M1RC1 topcrash [@ nsMsgFolder::SetBiffState]

Categories

(MailNews Core :: Backend, defect)

x86
Windows 2000
defect
Not set
critical

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: emaijala+moz, Assigned: mscott)

References

Details

(Keywords: crash, Whiteboard: [adt1])

Crash Data

Attachments

(1 file)

Mozilla crashes during shutdown in nsMsgFolder::SetBiffState() because it tries to use server which is null. Will attach a simple patch to avoid it.
This patch just adds a null check similar to the one above this place.
Changing severity as it is a crash anyway.
Severity: normal → critical
Note: This happens when the biff is doing new mail check at the moment of shutdown. It's not difficult to test because of bug 140274.
Comment on attachment 81045 [details] [diff] [review] Patch to add a null check sr=mscott
Attachment #81045 - Flags: superreview+
QA Contact: gayatri → sheelar
Attachment #81045 - Flags: review+
Comment on attachment 81045 [details] [diff] [review] Patch to add a null check r=bienvenu - I bet this was because of the change to null out the server during shutdown for the turbo problems
Keywords: crash, patch
does this crash exist in the moz 1.0 branch? If so, we need to migrate it onto the branch.
Keywords: nsbeta1
checked in to trunk
Keywords: nsbeta1
oops, acccidentally removed nsbeta1 keyword
Keywords: nsbeta1
5 1.0 branch crashers, all on Linux. (according to talkback).
Keywords: nsbeta1
OS: Windows 2000 → All
Hardware: PC → All
Topcrash for M1RC1, adding to summary for tracking even though this seems to be already fixed. :) Here's the info from today, there were many more comments but they all say about the same thing: Keyword List : mail(4), Count Platform List 17 Windows NT 5.0 build 2195 9 Windows NT 5.1 build 2600 2 Windows 98 4.10 build 67766222 1 Windows NT 4.0 build 1381 1 Windows 98 4.90 build 73010104 Count Build Id List 30 2002041717 No of Unique Users 23 Stack trace(Frame) nsMsgFolder::SetBiffState [d:\builds\seamonkey\mozilla\mailnews\base\util\nsMsgFolder.cpp line 2050] nsImapMailFolder::SetBiffStateAndUpdate [d:\builds\seamonkey\mozilla\mailnews\imap\src\nsImapMailFolder.cpp line 4818] SetBiffStateAndUpdateProxyEvent::HandleEvent [d:\builds\seamonkey\mozilla\mailnews\imap\src\nsImapProxyEvent.cpp line 719] nsImapEvent::imap_event_handler [d:\builds\seamonkey\mozilla\mailnews\imap\src\nsImapProxyEvent.cpp line 91] PL_HandleEvent [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c line 597] PL_ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\plevent.c line 530] nsEventQueueImpl::ProcessPendingEvents [d:\builds\seamonkey\mozilla\xpcom\threads\nsEventQueue.cpp line 392] (5680250) Comments: Closing out Mozilla 1.0 RC 1 after I had tried to start the Mozilla Profile Manager (which just opened a new browesr) and then tried to start the Netscape 6.22 Profile Manager (which launced my JVM for some reason). Exiting Mozilla caused a fault. (5642218) Comments: would not download new email messages. closing mail client and reopening does nothing. the pointer remains "busy". crashed upon mozilla exit. (5641960) Comments: would not download new email messages. closing mail client and reopening does nothing. the pointer remains "busy". crashed upon mozilla exit. (5641751) Comments: would not download new email messages. closing mail client and reopening does nothing. the pointer remains "busy". crashed upon mozilla exit. (5630547) URL: mail.yahoo.com (5630547) Comments: closed browser. browser go boom. (5597565) Comments: I just clicked Exit mozilla from the Quick Launch context menu. (5597505) Comments: I was closing it. (5585407) Comments: quit mozilla (5409375) Comments: closing netscape by turning off quick launch (5400638) Comments: closing Communicator after having changed the Theme setting (5391918) Comments: clicked "Exit Mozilla" from Quicklaunch Icon.restarting to install prefbar.xpi (5375432) Comments: While trying to close the browser component (5372197) Comments: Mozilla 1 RC1 Pop-mail doesn' t ask password when first time get mail. Cannot get mail because of that.
OS: All → Windows 2000
Hardware: All → PC
Summary: crash in nsMsgFolder during shutdown → crash in nsMsgFolder during shutdown; M1RC1 topcrash [@ nsMsgFolder::SetBiffState]
this needs to go into the branch then. Escalating. Marking fixed since this is fixed on the trunk. I'll drive it into the branch for Christian. Christian, I think you just checked this fix into a closed tree. You should always check the status of the tree before checking in.
Status: NEW → ASSIGNED
Keywords: adt1.0.0, nsbeta1+
My bad, I requested checkin before checking tree status. Sorry.
adding adt1.0.0+. Please check this in to the branch as soon as possible after getting drivers approval and add the fixed1.0.0 keyword.
Keywords: adt1.0.0adt1.0.0+
Whiteboard: [adt1]
Comment on attachment 81045 [details] [diff] [review] Patch to add a null check a=asa (on behalf of drivers) for checkin to the 1.0 branch
Attachment #81045 - Flags: approval+
Checking in mailnews/base/util/nsMsgFolder.cpp; /cvsroot/mozilla/mailnews/base/util/nsMsgFolder.cpp,v <-- nsMsgFolder.cpp new revision: 1.259.2.4; previous revision: 1.259.2.3 done
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Keywords: fixed1.0.0
Resolution: --- → FIXED
marking as fixed on the 1.0.0 branch. Christian checked this in just before I did.
Keywords: adt1.0.0+
I changed QA contact from Sheela to me. I am working on verification.
QA Contact: sheelar → olgam
Verified on Branch 04/30/02, Win2K, Linux. Also on Trunk 05/01/02, Win2K, Linux. 1. Checked Talkback data for nsMsgFolder::SetBiffState. Followed steps mentioned in comments - no crashes: - Exit - Exit while new email messages are downloaded - Close Browser - Remove Account - Start Profile Manager, exit, re-start N6, Exit. - Exit from QL 2. Checked file 'nsMsgFolder.cpp' through LXR.mozilla.org and verified changes: http://lxr.mozilla.org/seamonkey/source/mailnews/base/util/nsMsgFolder.cpp#2051.
Status: RESOLVED → VERIFIED
*** Bug 140865 has been marked as a duplicate of this bug. ***
Product: MailNews → Core
Product: Core → MailNews Core
Crash Signature: [@ nsMsgFolder::SetBiffState]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: