bug 140146 patch by ere@atp.fi r=bienvenu sr=mscott crash in nsMsgFolder during shutdown